# apps/auth-service/src/controller/auth.controller.ts
@@ -8,6 +8,12 @@ import {
   checkOTPrestrictions,
 } from "../utils/auth.helper";
 import bcrypt from "bcrypt";
+import {
+  ValidationError,
+  AuthError,
+} from "./../../../../packages/error-handler/index";
+import jwt from "jsonwebtoken";
+import { setCookie } from "./../utils/cookies/setCookie";
 
 // register a new user
 export const userRegistration = async (
@@ -59,7 +65,7 @@ export const verifyUser = async (
 
     //check for valid otp
     await verifyOtp(email, otp, next);
-console.log("otp verified successfully");
+    console.log("otp verified successfully");
 
     const hashedPassword = await bcrypt.hash(password.toString(), 10); // Hash the password
 
@@ -70,9 +76,65 @@ console.log("otp verified successfully");
       data: { name, email, password: hashedPassword },
     });
 
-    console.log('created user', user);
+    console.log("created user", user);
 
     res.status(201).send({ message: "User registered successfully", user });
+  } catch (err) {
+    next(err);
+  }
+};
+
+//login user
+export const loginUser = async (
+  req: Request,
+  res: Response,
+  next: NextFunction
+) => {
+  try {
+    const { email, password } = req.body;
+    if (!email || !password) {
+      return next(new ValidationError("email and password are required"));
+    }
+
+    const user = await prisma.users.findUnique({ where: { email } });
+    if (!user) {
+      return next(new AuthError("user does not exist"));
+    }
+
+    //verify password
+    const isPasswordValid = await bcrypt.compare(password, user.password!);
+    if (!isPasswordValid) {
+      return next(new AuthError("invalid credentials, password incorrect"));
+    }
+
+    //access token
+    const accessToken = jwt.sign(
+      { id: user.id, email: user.email, role: "user" },
+      process.env.ACCESS_TOKEN_SECRET as string,
+      {
+        expiresIn: "15m",
+      }
+    );
+
+    //refresh token
+    const refreshToken = jwt.sign(
+      { id: user.id, email: user.email, role: "user" },
+      process.env.REFRESH_TOKEN_SECRET as string,
+      {
+        expiresIn: "7d",
+      }
+    );
+
+    //store refress and access token in httpOnly cookie
+    setCookie(res, "refreshToken", refreshToken);
+    setCookie(res, "accessToken", accessToken);
+
+    res
+      .status(200)
+      .send({
+        message: "Login successful",
+        user: { id: user.id, email: user.email, name: user.name },
+      });
   } catch (err) {
     next(err);
   }
